--- a/web/Rails/app/views/articles/show.html.erb
+++ b/web/Rails/app/views/articles/show.html.erb
@@ -9,28 +9,22 @@
 
 <!--                                     Форма для комментариев 1(1 to many) -->
 
-<!-- По умолчанию URL формы будет '/articles/id'(show), но нам нужен '/articles/:article_id/comments', можно поменять вручную, но так делать не рекомендуется -->
-<!-- Потому для генерации нужного URL нужно использовать такой синтаксис из 2х компонентов связанных сущностей  -->
+<!-- По умолчанию URL формы будет '/articles/id'(show), а нужен '/articles/:article_id/comments', можно поменять вручную, но так делать не рекомендуется и лучше для генерации нужного URL использовать синтаксис из 2х компонентов связанных сущностей:  -->
 <%= form_for([@article, @comment]) do |f| %>
-  <!-- какието поля -->
-<% end %>
-<!-- но мы не добавляли переменную @comment в контроллер articles#show get '/articles/id' из которого и возвращается представление с формой -->
+<!-- но мы не создавали переменную @comment в контроллер articles#show get '/articles/id' из которого и возвращается это представление с формой -->
 
 <!-- Тк нет переменной @comment используем метод build прямо в форме -->
 <!-- У нас есть коллекция(тут @article.comments). Если применить к этой коллекции метод build, то создастся новый объект Comment, все поля которого будут со значением nil, за исключением aricle_id, соответсвующего @article, те привязан к нашей статье. Этот объект пока не будет сохранен, но его будет достаточно для создания нужного URL для form_for -->
 <%= form_for([@article, @article.comments.build]) do |f| %>
   <!-- Теперь у нас есть нужный URL '/articles/:article_id/comments' в атрибуте action -->
 
-  <p>
-    <%= f.label :author %> <!-- <label for="comment_author">Author</label> -->
-    <%= f.text_field :author %> <!-- <input type="text" name="comment[author]" id="comment_author" /> -->
-  </p>
-  <p>
-    <%= f.label :body %> <!-- <label for="comment_body">Body</label> -->
-    <%= f.text_area :body %> <!-- <textarea name="comment[body]" id="comment_body"> -->
-  </p>
+  <%= f.label :author %> <!-- <label for="comment_author">Author</label> -->
+  <%= f.text_field :author %> <!-- <input type="text" name="comment[author]" id="comment_author" /> -->
 
-  <p><%= f.submit %></p> <!-- <input type="submit" name="commit" value="Create Comment" data-disable-with="Create Comment" /> -->
+  <%= f.label :body %> <!-- <label for="comment_body">Body</label> -->
+  <%= f.text_area :body %> <!-- <textarea name="comment[body]" id="comment_body"> -->
+
+  <%= f.submit %> <!-- <input type="submit" name="commit" value="Create Comment" data-disable-with="Create Comment" /> -->
 
 <% end %>
 
@@ -45,18 +39,17 @@
 
 <!-- 1. Норм вариант -->
 <%= form_for([@article, @article.comments.build]) do |f| %>
-  <p>
-    <%= current_user.username %> <!-- просто, username тк лэйбл к скрытому полю нафиг не нужен -->
-    <%= f.hidden_field :author, value: current_user.username %>
-    <!-- value: current_user.username - задаем значение поля с именем текущего пользователя -->
-    <!-- hidden_field - для скрытого поля -->
-    <!-- <input autocomplete="off" type="hidden" value="kroker" name="comment[author]" id="comment_author" /> -->
-  </p>
-  <p>
-    <%= f.label :body %>
-    <%= f.text_area :body %>
-  </p>
-  <p><%= f.submit %></p>
+
+  <%= current_user.username %> <!-- просто, username тк лэйбл к скрытому полю нафиг не нужен -->
+  <%= f.hidden_field :author, value: current_user.username %>
+  <!-- value: current_user.username - задаем значение поля с именем текущего пользователя -->
+  <!-- hidden_field - для скрытого поля -->
+  <!-- <input autocomplete="off" type="hidden" value="kroker" name="comment[author]" id="comment_author" /> -->
+
+  <%= f.label :body %>
+  <%= f.text_area :body %>
+
+  <%= f.submit %>
 <% end %>
 
 <!-- 2. Мой мутный вариант, где изменяется форма вместо добавления параметра value в нужное поле -->
@@ -76,9 +69,8 @@
 
 <% @article.comments.each do |comment| %>
 
-  <p><b>Автор:</b> <%= comment.author %></p>
+  <p>Автор: <%= comment.author %></p>
   <p><%= comment.body %></p>
-  <hr>
 
 <% end %>
 
