--- a/web/Rails/app/views/questions/edit.html.erb
+++ b/web/Rails/app/views/questions/edit.html.erb
@@ -2,8 +2,8 @@
 
 <!-- Рендерим нашу фрму из фаила _form.html.erb -->
 <%= render 'form' %>
-<!-- render - используем для того чтоб подставить на эту позицию какуюто разметку -->
+<!-- render - используем для того чтоб подставить на эту позицию какуюто разметку из паршала -->
 <!-- 'form' - обозначает фаил _form.html.erb из которого будет взята разметка -->
 
-<!-- По умолчанию берет фаил из текущей дериктории (представления в которое вставляется или которая привязана к экшену ??), если хотим отрендерить из другой директории то пишем например  -->
+<!-- По умолчанию берет фаил из текущей дериктории , если хотим отрендерить из другой директории то пишем например  -->
 <%= render 'pages/form' %>
