--- a/web/Rails/app/views/questions/index.html.erb
+++ b/web/Rails/app/views/questions/index.html.erb
@@ -1,4 +1,4 @@
-<!--                      Хэлпер для названия вкладки с названием страницы -->
+<!--                          Хэлпер для названия вкладки с названием страницы -->
 
 <!-- Данную конструкцию с другими значениями вместо 'Questions' можем добавить на другие страницы чтобы изменять название во вкладке -->
 <% provide :page_title, 'Questions' %>
@@ -71,6 +71,26 @@
 
 <!-- Пагинация вариант 2-2: pagy - аналогично предыдущему но вынесено в хэлпер pagination чтобы не писать везде условие -->
 <%= pagination(@pagy) %> <!-- теперь мы просто можем подставлять это везде -->
+
+
+
+
+
+
+<!--                      index.html.erb вариант 2, с выносом в паршал итерации вопросов  -->
+
+<% provide :page_title, t('.title') %>
+<% currently_at t('menu.questions') %>
+
+<h1 class="mb-4"><%= t('.title') %></h1>
+
+<%= link_to t('.new'), new_question_path, class: 'btn btn-primary btn-lg mb-3' %>
+
+<%= pagination @pagy %>
+
+<%= render @questions %> <!-- Вынесем итерацию в паршал _question.html.erb  -->
+
+<%= pagination @pagy %>
 
 
 
