--- a/web/Rails/app/views/questions/show.html.erb
+++ b/web/Rails/app/views/questions/show.html.erb
@@ -1,4 +1,5 @@
 <!--                                           Вывод вопроса -->
+
 <h1 class="mb-4"><%= @question.title %></h1>
 <!-- @question прописан и в create контроллере Answers, нужно на случай с непройденной валидацией и рендером этой страницы -->
 
@@ -30,6 +31,7 @@
 
 
 <!--                                           Форма для ответа -->
+
 <h2>Write your answer</h2>
 
 <!-- Вариант 1: Пишем код для формы в данном фаиле -->
@@ -38,7 +40,7 @@
 <%= render 'shared/errors', object: @answer %>
 
 <%= form_with model: [@question, @answer] do |f| %> <!-- post '/questions/:question_id/answers' -->
-<!-- @answer = @question.answers.build  для создагия URL прописали в экшене show Questions -->
+<!-- @answer = @question.answers.build  - прописали в экшене show Questions для создагия URL -->
 
   <div class="mb-3 row">
     <div class="col-sm-2 col-form-label">
@@ -65,7 +67,7 @@
 
 <!-- Вариант 1: Пишем код в цикле с разметкой для ответа прямо тут -->
 <% @answers.each do |answer| %>
-<!-- @answers = @question.answers.order created_at: :desc  -  прописали в экшене show контроллера Questions, похоже на хардкод вместо @question.answers -->
+<!-- @answers = @question.answers.order created_at: :desc  -  прописали в экшене show контроллера Questions, похоже на хардкод вместо @question.answers тут -->
 <!-- Тоже самое прописали и в create контроллере Answers, нужно на случай с непройденной валидацией и рендером этой страницы -->
 
   <!-- Блок ответа, с 2я вариантами якорей для ссылки якоря -->
@@ -98,9 +100,9 @@
 <!-- Цикл нам будет уже не нужен, тк Рэилс принимая коллекцию(массив) @answers автоматически будет выводить каждый ответ из нее применяя к нему паршал _answer.html.erb -->
 <%= render partial: 'answers/answer', collection: @answers, as: :answer, locals: {question: @question} %>
 <!-- partial: 'answers/answer'  - обозначаем что рэндерим именно паршал -->
-<!-- collection: @answers  - обозначаем то что за переменной коллекция, чтобы рендерило каждый элемент по очереди как в цикле -->
+<!-- collection: @answers  - обозначаем то что за переменной коллекция, чтобы рендерило каждый элемент по очереди как в each -->
 <!-- as: :answer  - задаем что каждый элемент коллекции в паршале будет присваиваться в пеменную answer -->
-<!-- locals: {question: @question} - создаем в паршале локальную переменную question в которую присваиваем @question. Это нужно на случай если паршал будет применяться не только тут а на странице где из экшена не приходит @question -->
+<!-- locals: {question: @question} - создаем в паршале локальную переменную question в которую присваиваем @question. Это нужно на случай если паршал будет применяться не только тут а и на странице где из экшена не приходит @question -->
 
 <!-- Вариант 2б: Без доп опций, если точно знаем что используем там где @question определен -->
 <!-- Рэилс понимал бы все описанное сверху, кроме locals: {question: @question} и потому это бы работало только на тех страницах куда из экшена в вид и соотв рендерищийся в нем паршал бы передавалась переменная @question. Это работает так: по умолчанию Рэилс понимает что это коллекция, идет в директорию с тем же названием что и переменная и рэндерит паршал с тем же названием(но в единственном числе) -->
