--- a/web/Rails/app/views/questions/show.html.erb
+++ b/web/Rails/app/views/questions/show.html.erb
@@ -8,6 +8,10 @@
   <%= @question.formatted_created_at %>
 </time>
 
+<!-- Юзер которму принадлежит статья и его аватар через граватар (OneToMany) -->
+<%= @question.user.gravatar %>
+<%= @question.user.name_or_email %>
+
 <!-- На примере вывода тела вопроса - хэлперы обработки тегов в тексте -->
 <div class="lead my-3">
   <!-- 1. По умолчанию введенные пользователем в поле теги не обрабатываются, но их символы остаются -->
@@ -67,7 +71,7 @@
 
 <!-- Вариант 1: Пишем код в цикле с разметкой для ответа прямо тут -->
 <% @answers.each do |answer| %>
-<!-- @answers = @question.answers.order created_at: :desc  -  прописали в экшене show контроллера Questions, похоже на хардкод вместо @question.answers тут -->
+<!-- @answers = @question.answers.order created_at: :desc  -  прописали в экшене show контроллера Questions, вместо того чтоб писать @question.answers тут -->
 <!-- Тоже самое прописали и в create контроллере Answers, нужно на случай с непройденной валидацией и рендером этой страницы -->
 
   <!-- Блок ответа, с 2я вариантами якорей для ссылки якоря -->
@@ -83,9 +87,7 @@
       <%= answer.formatted_created_at %>
     </time>
 
-    <p>
-      <%= answer.body %>
-    </p>
+    <p><%= answer.body %></p>
 
     <!--                           Ссылки удаления, редактирования -->
     <%= link_to 'Delete', question_answer_path(@question, answer), data: {method: :delete, confirm: "Are you sure?"} %>
@@ -105,7 +107,7 @@
 <!-- locals: {question: @question} - создаем в паршале локальную переменную question в которую присваиваем @question. Это нужно на случай если паршал будет применяться не только тут а и на странице где из экшена не приходит @question -->
 
 <!-- Вариант 2б: Без доп опций, если точно знаем что используем там где @question определен -->
-<!-- Рэилс понимал бы все описанное сверху, кроме locals: {question: @question} и потому это бы работало только на тех страницах куда из экшена в вид и соотв рендерищийся в нем паршал бы передавалась переменная @question. Это работает так: по умолчанию Рэилс понимает что это коллекция, идет в директорию с тем же названием что и переменная и рэндерит паршал с тем же названием(но в единственном числе) -->
+<!-- Рэилс автоматически понимает все описанное сверху, кроме locals: {question: @question} и потому этот синтаксис сработает только там где из экшена в вид и соотв рендерищийся в нем паршал передается переменная @question. Это работает так: по умолчанию Рэилс понимает что это коллекция, идет в директорию с тем же названием что и переменная и рэндерит паршал с тем же названием(но в единственном числе) -->
 <%= render @answers %>
 
 
