--- a/web/Rails/app/views/shared/_menu.html.erb
+++ b/web/Rails/app/views/shared/_menu.html.erb
@@ -93,12 +93,15 @@
           </li>
         </ul>
 
+        <!--  Так же применим тут граватар  -->
         <ul class="nav col-12 col-lg-auto mb-2 mb-md-0">
           <% if user_signed_in? %>
             <li class="dropdown">
-              <%= nav_tab current_user.name_or_email, '#',
-                class: 'nav-link px-2 dropdown-toggle',
-                data: {"bs-toggle": 'dropdown'}, current_page: current_page %>
+              <%= link_to '#', class: 'nav-link px-2 dropdown-toggle text-white', data: {"bs-toggle": 'dropdown'} do %> <!--  Блок чтобы ссылка обернула и имя и аватарку  -->
+                <%= current_user.gravatar %> <!--  применим тут граватар  -->
+                <%= current_user.name_or_email %>
+              <% end %>
+
               <ul class="dropdown-menu">
                 <li><%= link_to t('menu.edit_profile'), edit_user_path(current_user), class: 'dropdown-item' %></li>
                 <li><hr class="dropdown-divider"></li>
