--- a/web/Sinatra/views/a_index.erb
+++ b/web/Sinatra/views/a_index.erb
@@ -1,6 +1,6 @@
 <h1>Hello</h1>
 
-<p>You typed: <%= @login %></p> <!-- Специальный синтаксис .erb размещающий любой рубикод(тут значение переменной @login) в html коде, при помощи этих специальных кавычк. Чемто похоже на интерполяцию -->
+<p>You typed: <%= @login %></p> <!-- Синтаксис .erb размещающий любой рубикод(тут @login) в html коде, при помощи этих специальных кавычк. Чемто похоже на интерполяцию -->
 <p>Your password: <%= @password %></p>
 <p><%= @denied %></p>
 
