--- a/web/Rails/app/views/questions/show.html.erb
+++ b/web/Rails/app/views/questions/show.html.erb
@@ -8,10 +8,6 @@
   <%= @question.formatted_created_at %>
 </time>
 
-<!-- Юзер которму принадлежит статья и его аватар через граватар (OneToMany) -->
-<%= @question.user.gravatar %>
-<%= @question.user.name_or_email %>
-
 <!-- На примере вывода тела вопроса - хэлперы обработки тегов в тексте -->
 <div class="lead my-3">
   <!-- 1. По умолчанию введенные пользователем в поле теги не обрабатываются, но их символы остаются -->
@@ -24,7 +20,17 @@
   <%= strip_tags @question.body %>
 </div>
 
-<%= link_to 'Show', question_path(@question), class: 'btn btn-primary' %>
+<!-- Юзер которму принадлежит статья и его аватар через граватар (OneToMany) -->
+<%= @question.user.gravatar %>
+<%= @question.user.name_or_email %>
+
+<!-- Рендерим паршал формы комментариев (Polym_assoc) -->
+<%= render 'comments/commentable', commentable: @question, comment: @comment, html_id: 'questionComments' %>
+<!-- 'comments/commentable' - паршал который рендерим -->
+<!-- commentable: @question - передаем вопрос в локальную переменную паршала commentable -->
+<!-- comment: @comment - передаем комментарий в локальную переменную паршала comment, его тут нет и он не планируется, но если созданный в данной форме коммент не пройдет валидацию, то этот коммент уже будет объявлен и нужен для сообщения об ошибке -->
+<!-- html_id: 'questionComments' -  -->
+
 <%= link_to 'Edit', edit_question_path(@question), class: 'btn btn-secondary' %>
 <%= link_to 'Destroy', question_path(@question), class: 'btn btn-danger', data: {method: :delete, confirm: 'Are you sure?'} %>
 <!-- По умолчанию не сможет удалить если у этого вопроса есть связвнные ответы, чтобы было можно, нужно настроить в модели -->
