--- a/web/Rails/app/views/shared/_errors.html.erb
+++ b/web/Rails/app/views/shared/_errors.html.erb
@@ -2,7 +2,7 @@
 
 <!-- object  - (можно назвать как угодно) общее имя для объектов проверяемых на ошибки, переданных например object: @contact, чтобы можно было использовать этот паршал для разных сущностей -->
 
-<% if object.errors.full_messages.any? %>
+<% if object&.errors&.full_messages&.any? %>
   <div class="alert alert-danger"> <!-- например со стилями бутстрапа -->
     <ul class="mb-0">
       <% object.errors.full_messages.each do |msg| %>
