--- a/web/Rails/app/views/questions/show.html.erb
+++ b/web/Rails/app/views/questions/show.html.erb
@@ -29,7 +29,7 @@
 <!-- 'comments/commentable' - паршал который рендерим -->
 <!-- commentable: @question - передаем вопрос в локальную переменную паршала commentable -->
 <!-- comment: @comment - передаем комментарий в локальную переменную паршала comment, его тут нет и он не планируется, но если созданный в данной форме коммент не пройдет валидацию, то этот коммент уже будет объявлен и нужен для сообщения об ошибке -->
-<!-- html_id: 'questionComments' -  -->
+<!-- html_id: 'questionComments' - передаем значение якоря для открытия комментов к вопросу, при помощи dom_id, тк вопрос на странице только один то можем захардкодить значения для якоря и передать просто строку -->
 
 <%= link_to 'Edit', edit_question_path(@question), class: 'btn btn-secondary' %>
 <%= link_to 'Destroy', question_path(@question), class: 'btn btn-danger', data: {method: :delete, confirm: 'Are you sure?'} %>
