--- a/web/Rails/app/views/comments/_commentable.html.erb
+++ b/web/Rails/app/views/comments/_commentable.html.erb
@@ -24,30 +24,27 @@
 
 
 
-<!--                                         Законченый вариант () -->
+<!--                             Законченый вариант с исправлением отображения вывода ошибок -->
 
-<% is_current_comment = comment&.for?(commentable) %>
+<!-- Создадим локальную переменную для данного паршала, чтобы не дублировать код -->
+<% is_current_comment = comment&.for?(commentable) %> <!-- возвращает true или false -->
+<!-- commentable - передается в паршал либо из вопрос из questions/show.html.erb либо ответ из _answer.html.erb -->
+<!-- comment - используем тут передаваемую в паршал локальную переменную вместо @comment тк так надежнее, она точно передается -->
 
 <%= link_to t('questions.show.comments'), "##{html_id}", class: 'btn btn-primary', data: {'bs-toggle': 'collapse'} %>
 
 <%= tag.div class: "collapse #{'show' if is_current_comment}", id: html_id do %>
+<!-- #{'show' if is_current_comment} - добавляем класс бутстрапа открывающий коллапс объект для нужного блока -->
 
-  <%= form_with model: [commentable, (is_current_comment ? comment : commentable.comments.build)],
-  class: 'pt-3 border-top my-2' do |f| %>
+  <%= form_with model: [commentable, (is_current_comment ? comment : commentable.comments.build)] do |f| %>
+  <!-- В URL используем comment, если это тот блок в который передается ошмбка (тоесть это значит что валидация не прошла) и форма подсветится красным(обводки полей) или билд новой сущьности для остальных блоков -->
 
-    <% if is_current_comment %>
+    <% if is_current_comment %> <!-- тоесть теперь мы вызываем отображение ошибок только для нужного блока -->
       <%= render 'shared/errors', object: comment %>
     <% end %>
 
-    <div class="mb-3 row">
-      <div class="col-sm-2 col-form-label">
-        <%= f.label :body %>
-      </div>
-
-      <div class="col-sm-10">
-        <%= f.text_area :body, class: 'form-control form-control-sm' %>
-      </div>
-    </div>
+    <%= f.label :body %>
+    <%= f.text_area :body, class: 'form-control form-control-sm' %>
 
     <%= f.submit t('global.button.submit'), class: 'btn btn-sm btn-primary' %>
   <% end %>
