--- a/web/Rails/app/views/shared/_menu.html.erb
+++ b/web/Rails/app/views/shared/_menu.html.erb
@@ -84,7 +84,7 @@
                   <% else %> <!-- если текущая локаль не равна локали из переменной -->
                     <%= link_to t(locale), root_path(locale: locale), class: 'dropdown-item' %> <!-- ссылка переключения локали, добавляет локаль в URL ?? (можно было без дропдаун, списка и цикла по простому сделать лишь 2 ссылки переключения с url_for(locale: :ru) и url_for(locale: :en)) -->
                     <!-- root_path(locale: locale) - перебрасывает на главную -->
-                    <!-- url_for(locale: locale) - не перебрасывает на главную -->
+                    <!-- url_for(locale: locale) - не перебрасывает на главную, остается на той же странице, но не сохраняет дополнительные значения в гет-запросе после знака ?, а там например стоит пагинация, чтобы это дополнительно улучшить можно использовать вариант отсюда https://stackoverflow.com/questions/35189892/rails5-params-merge-causes-errors-about-being-insecure -->
                     <!-- locale - название локали (тут :en или :ru) -->
                   <% end %>
                 </li>
