--- a/web/Rails/app/views/answers/_answer.html.erb
+++ b/web/Rails/app/views/answers/_answer.html.erb
@@ -63,7 +63,7 @@
 
 <!-- Рендерим паршал формы комментариев (Polym_assoc) -->
 <%= render 'comments/commentable', commentable: answer, comment: @comment, html_id: dom_id(answer, 'comment_form') %>
-<!-- comment: @comment - передаем комментарий в локальную переменную паршала comment, его тут нет и он не планируется, но если созданный в данной форме коммент не пройдет валидацию, то этот коммент уже будет объявлен и нужен для сообщения об ошибке. Созданные же комменты рендарятся от коллекции комментируемого в паршале _commentable.html.erb -->
+<!-- comment: @comment - передаем комментарий в локальную переменную паршала comment, его тут нет и он не планируется, но если созданный в данной форме коммент не пройдет валидацию, то этот коммент уже будет объявлен и нужен для сообщения об ошибке. Созданные же ранее комменты рендарятся от коллекции комментируемого в паршале _commentable.html.erb -->
 <!-- html_id: dom_id(answer, 'comment_form') - передаем значение якоря для открытия комментов, уникалоьный в каждый ответ, при помощи dom_id, имя якоря будет состоять из 'comment_form' и айди этого answer, например #comment_form_answer_20 -->
 
 
