--- a/web/Rails/app/views/questions/edit.html.erb
+++ b/web/Rails/app/views/questions/edit.html.erb
@@ -7,3 +7,34 @@
 
 <!-- По умолчанию берет фаил из текущей дериктории , если хотим отрендерить из другой директории то пишем например  -->
 <%= render 'pages/form' %>
+
+
+
+
+<!--                                      Полный вариант -->
+
+<% provide :page_title, t('.title') %>
+<% currently_at t('menu.questions') %>
+
+<h1 class="mb-4"><%= t '.title' %></h1>
+
+<%= render 'form', tags: @tags %>
+<!-- tags: @tags - добавляем локальную переменную tags с коллекцией тегов в паршал формы вопросов _form.html.erb для селектора -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--  -->
