--- a/web/Rails/app/views/questions/index.html.erb
+++ b/web/Rails/app/views/questions/index.html.erb
@@ -24,6 +24,7 @@
 
 <!-- Пагинация вариант 1: kaminari - кнопки для переключения страниц -->
 <%= paginate @questions %>
+<!-- paginate - специальный хэлпер kaminari для того чтобы переключаться по страницам -->
 
 <!-- Пагинация вариант 2: pagy - кнопки для переключения страниц -->
 <%== pagy_bootstrap_nav @pagy %>
@@ -61,6 +62,7 @@
 
 <!-- Пагинация вариант 1: kaminari - кнопки для переключения страниц -->
 <%= paginate @questions %>
+<!-- paginate - специальный хэлпер kaminari для того чтобы переключаться по страницам -->
 
 <!-- Пагинация вариант 2: pagy - кнопки для переключения страниц -->
 <%== pagy_bootstrap_nav @pagy %>
