--- a/web/Rails/app/views/questions/new.html.erb
+++ b/web/Rails/app/views/questions/new.html.erb
@@ -2,3 +2,34 @@
 
 <!-- Рендерим нашу фрму из фаила _form.html.erb -->
 <%= render 'form' %>
+
+
+
+
+<!--                                      Полный вариант -->
+
+<% provide :page_title, t('.title') %>
+<% currently_at t('menu.questions') %>
+
+<h1 class="mb-4"><%= t('.title') %></h1>
+
+<%= render 'form', tags: @tags %>
+<!-- tags: @tags - добавляем локальную переменную tags с коллекцией тегов в паршал формы вопросов _form.html.erb для селектора -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--  -->
