--- a/web/Rails/app/views/layouts/application(helper).html.erb
+++ b/web/Rails/app/views/layouts/application(helper).html.erb
@@ -3,7 +3,7 @@
 <!--  (helper) - в названии фаила просто для отличия, чтоб сделать не захламленную копию лэйаут -->
 
 <!DOCTYPE html>
-<html>
+<html lang="<%= I18n.locale %>">
   <head>
     <meta charset="utf-8">
 
@@ -25,7 +25,7 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body>
+  <body data-lang="<%= I18n.locale %>"> <!-- I18n.locale - дополнительно подключим переводы в боди для турбоссылок, тк при переходе по страницам от них отрисовывается только тег боди без тега html -->
 
     <!-- Принимает блок с меню из provide :main_menu паршала _menu.html.erb с отрендериным в хэлпере currently_at кодом -->
     <%= yield :main_menu %>
