--- a/web/Rails/app/views/questions/_form.html.erb
+++ b/web/Rails/app/views/questions/_form.html.erb
@@ -21,17 +21,24 @@
     <%= f.text_area :body, required: true, minlength: 2 %>
   </div>
 
-  <!-- селектор для выбора тегов для данного вопроса (ManyToMany) -->
+  <!-- селектор(вариант 1) для выбора тегов для данного вопроса (ManyToMany) -->
   <div>
     <%= f.label :tags %>
     <%= f.collection_select :tag_ids, tags, :id, :title, {}, multiple: true %>
     <!-- collection_select - хэлпер селектора -->
     <!-- :tag_ids - название поля -->
     <!-- tags - коллекция всех тегов которую сюда передаем из questions/new.html.erb или questions/edit.html.erb -->
-    <!-- :id - метод который нужно использовать при отображении идентификаторов в разметке  -->
-    <!-- :title - метод который нужно использовать при отображении лэйблов на странице  -->
+    <!-- :id - метод(модели) который нужно применять к сущности из коллекции tags для значений элементов(передаются на сервер) селектора  -->
+    <!-- :title - метод(модели) который нужно применять к сущности из коллекции tags при отображении лэйблов(названий тегов) на странице в пунктах селектора -->
     <!-- {} - пустые опции  -->
     <!-- multiple: true - ставит атрибут multiple в селектор (выбор множества вариантов через контрл) -->
+  </div>
+  <!-- селектор(вариант 2) с ассинхронными запросами и поиском вместо списка при помощи blueprinter (ManyToMany) -->
+  <div>
+    <%= f.label :tags %>
+    <%= f.collection_select :tag_ids, @question.tags, :id, :title, {}, multiple: true,
+      class: 'js-multiple-select', data: {'ajax-url': '/api/tags'} %>
+      <!-- @question.tags вместо tags, чтобы отображались выбранные в questions/edit.html.erb либо получится пустая коллекция в questions/new.html.erb, а теги для поиска будут приходить из сгенерированного json  -->
   </div>
 
   <%= f.submit "Submit question!" %>
