--- a/web/Rails/app/views/questions/index.html.erb
+++ b/web/Rails/app/views/questions/index.html.erb
@@ -93,11 +93,15 @@
   <%= f.collection_select :tag_ids, (@tags || []), :id, :title, {selected: params[:tag_ids]},
     multiple: true, required: true, class: 'js-multiple-select', data: {'ajax-url': '/api/tags'} %>
     <!-- :tag_ids имя селесктора -->
-    <!-- (@tags || []) либо коллекция тегов переданная из index либо -->
+    <!-- (@tags || []) либо коллекция тегов переданная из index либо пустая коллекция -->
+    <!-- :id - метод(модели) который нужно применять к сущности из коллекции tags для значений элементов(передаются на сервер) селектора  -->
     <!-- :title - заголовки тегов те их имена -->
     <!-- {selected: params[:tag_ids]} - те когда эта форма будет отправлена и вернется страница то в селекторе уже будут выбраны все те варианты что мы собствено выбрали до отправки формы -->
     <!-- required: true - валидация запрещает отправку пустой формы -->
-    <!-- data: {'ajax-url': '/api/tags'} - опции ассинхронного поиска -->
+    <!-- data: {'ajax-url': '/api/tags'} - опции ассинхронного поиска где:
+      'ajax-url' - это опция для указания URL
+      '/api/tags' - это URL к которому обращается ассинхронный запрос, когда пользователь вводит символы в поле селектора
+    -->
   <%= f.submit t('global.button.submit'), class: 'btn btn-primary' %>
 <% end %>
 
