--- a/web/Rails/app/views/admin/users/_user.html.erb
+++ b/web/Rails/app/views/admin/users/_user.html.erb
@@ -5,3 +5,18 @@
   <td><%= user.created_at %></td>
   <td><%= user.updated_at %></td>
 </tr>
+
+
+<!-- Вариант2: Добавим роль и кнопки для изменения роли (UsersRoles) -->
+<tr>
+  <th scope="row"><%= user.id %></th>
+  <td><%= user.name %></td>
+  <td><%= user.email %></td>
+  <td><%= user.role %></td> <!-- Выведем роль -->
+  <td><%= user.created_at %></td>
+  <td> <!-- Кнопки на изменение и удаление юзера -->
+    <%= link_to 'Edit', edit_admin_user_path(user), class: 'btn btn-secondary' %>
+    <%= link_to 'Delete', admin_user_path(user), class: 'btn btn-danger',
+      data: {method: :delete, confirm: t('global.dialog.you_sure')} %>
+  </td>
+</tr>
